--- a/src/stories/checkbox.css
+++ b/src/stories/checkbox.css
@@ -73,7 +73,7 @@
     visibility: hidden;
     color: #fff;
     position: relative;
-    top: -1px;
+    top: 0;
     left: -1px;
 }
 
